[project]
name = "calendar-export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.171.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mypy>=1.16.0",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "types-google-cloud-ndb>=2.3.0.20250317",
    "types-python-dateutil>=2.9.0.20250516",
    "types-requests>=2.32.0.20250602",
]
